Add security to requestslist
